// LinkedIn Data Model - DBML Format
// Use this at: https://dbdiagram.io/
// Or: https://dbdocs.io/

// ============================================
// CORE USER TABLES
// ============================================

Table users {
  user_id int [pk, increment]
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  headline varchar(200)
  profile_photo_url varchar(500)
  location varchar(100)
  about text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_active boolean [default: true]
  
  Indexes {
    email
    (first_name, last_name)
  }
}

Table companies {
  company_id int [pk, increment]
  company_name varchar(200) [not null]
  industry varchar(100)
  company_size varchar(50)
  headquarters varchar(100)
  website varchar(200)
  description text
  logo_url varchar(500)
  founded_year int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    company_name
  }
}

// ============================================
// CONTENT TABLES
// ============================================

Table posts {
  post_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  content text [not null]
  image_url varchar(500)
  video_url varchar(500)
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_deleted boolean [default: false]
  
  Indexes {
    user_id
    created_at
  }
}

Table comments {
  comment_id int [pk, increment]
  post_id int [not null, ref: > posts.post_id]
  user_id int [not null, ref: > users.user_id]
  content text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_deleted boolean [default: false]
  
  Indexes {
    post_id
    user_id
  }
}

Table likes {
  like_id int [pk, increment]
  post_id int [not null, ref: > posts.post_id]
  user_id int [not null, ref: > users.user_id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    post_id
    user_id
    (user_id, post_id) [unique]
  }
}

// ============================================
// RELATIONSHIP TABLES
// ============================================

Table connections {
  connection_id int [pk, increment]
  user_id_1 int [not null, ref: > users.user_id]
  user_id_2 int [not null, ref: > users.user_id]
  status varchar(20) [default: 'pending', note: 'pending, accepted, blocked']
  requested_at timestamp [default: `CURRENT_TIMESTAMP`]
  accepted_at timestamp [null]
  
  Indexes {
    user_id_1
    user_id_2
    status
    (user_id_1, user_id_2) [unique]
  }
  
  Note: 'Self-referencing table for user connections'
}

Table messages {
  message_id int [pk, increment]
  sender_id int [not null, ref: > users.user_id]
  receiver_id int [not null, ref: > users.user_id]
  content text [not null]
  sent_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_read boolean [default: false]
  read_at timestamp [null]
  
  Indexes {
    sender_id
    receiver_id
    sent_at
  }
  
  Note: 'Direct messages between users'
}

// ============================================
// PROFILE TABLES
// ============================================

Table work_experience {
  experience_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  company_id int [ref: > companies.company_id]
  job_title varchar(100) [not null]
  employment_type varchar(20) [default: 'Full-time', note: 'Full-time, Part-time, Contract, Freelance, Internship']
  start_date date [not null]
  end_date date [null]
  description text
  is_current boolean [default: false]
  
  Indexes {
    user_id
    company_id
    (start_date, end_date)
  }
}

Table education {
  education_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  institution_name varchar(200) [not null]
  degree varchar(100)
  field_of_study varchar(100)
  start_year int
  end_year int [null]
  grade varchar(20)
  description text
  
  Indexes {
    user_id
    institution_name
  }
}

// ============================================
// SKILLS TABLES
// ============================================

Table skills {
  skill_id int [pk, increment]
  skill_name varchar(100) [unique, not null]
  category varchar(50)
  
  Indexes {
    skill_name
    category
  }
  
  Note: 'Master list of all available skills'
}

Table user_skills {
  user_skill_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  skill_id int [not null, ref: > skills.skill_id]
  proficiency_level varchar(20) [default: 'Intermediate', note: 'Beginner, Intermediate, Advanced, Expert']
  years_of_experience int [default: 0]
  endorsed_count int [default: 0]
  
  Indexes {
    user_id
    skill_id
    (user_id, skill_id) [unique]
  }
  
  Note: 'Junction table for many-to-many relationship between users and skills'
}

// ============================================
// ADDITIONAL TABLES (Extended Features)
// ============================================

Table groups {
  group_id int [pk, increment]
  group_name varchar(200) [not null]
  description text
  created_by int [not null, ref: > users.user_id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_private boolean [default: false]
  member_count int [default: 0]
  
  Indexes {
    group_name
    created_by
  }
}

Table group_members {
  group_member_id int [pk, increment]
  group_id int [not null, ref: > groups.group_id]
  user_id int [not null, ref: > users.user_id]
  joined_at timestamp [default: `CURRENT_TIMESTAMP`]
  role varchar(20) [default: 'member', note: 'admin, moderator, member']
  
  Indexes {
    group_id
    user_id
    (group_id, user_id) [unique]
  }
}

Table job_postings {
  job_id int [pk, increment]
  company_id int [not null, ref: > companies.company_id]
  posted_by int [not null, ref: > users.user_id]
  job_title varchar(200) [not null]
  job_description text
  location varchar(100)
  employment_type varchar(20)
  salary_range varchar(50)
  posted_at timestamp [default: `CURRENT_TIMESTAMP`]
  expires_at timestamp
  is_active boolean [default: true]
  
  Indexes {
    company_id
    posted_by
    job_title
  }
}

Table job_applications {
  application_id int [pk, increment]
  job_id int [not null, ref: > job_postings.job_id]
  user_id int [not null, ref: > users.user_id]
  applied_at timestamp [default: `CURRENT_TIMESTAMP`]
  status varchar(20) [default: 'pending', note: 'pending, reviewed, shortlisted, rejected, accepted']
  resume_url varchar(500)
  cover_letter text
  
  Indexes {
    job_id
    user_id
    status
    (job_id, user_id) [unique]
  }
}

Table notifications {
  notification_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  notification_type varchar(50) [not null, note: 'connection_request, message, like, comment, job_alert']
  content text
  related_id int [note: 'ID of related entity (post, message, etc.)']
  is_read boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    user_id
    is_read
    created_at
  }
}

Table endorsements {
  endorsement_id int [pk, increment]
  user_skill_id int [not null, ref: > user_skills.user_skill_id]
  endorsed_by int [not null, ref: > users.user_id]
  endorsed_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    user_skill_id
    endorsed_by
    (user_skill_id, endorsed_by) [unique]
  }
  
  Note: 'Users can endorse skills of their connections'
}

Table recommendations {
  recommendation_id int [pk, increment]
  recommended_user_id int [not null, ref: > users.user_id]
  recommender_id int [not null, ref: > users.user_id]
  relationship varchar(100) [note: 'e.g., Manager, Colleague, Client']
  recommendation_text text [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  is_visible boolean [default: true]
  
  Indexes {
    recommended_user_id
    recommender_id
  }
  
  Note: 'Written recommendations from connections'
}

Table search_history {
  search_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  search_query varchar(200) [not null]
  search_type varchar(50) [note: 'people, jobs, companies, posts, groups']
  searched_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    user_id
    searched_at
  }
}

Table profile_views {
  view_id int [pk, increment]
  profile_user_id int [not null, ref: > users.user_id, note: 'User whose profile was viewed']
  viewer_user_id int [ref: > users.user_id, note: 'User who viewed (null if anonymous)']
  viewed_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Indexes {
    profile_user_id
    viewer_user_id
    viewed_at
  }
}

Table shares {
  share_id int [pk, increment]
  post_id int [not null, ref: > posts.post_id]
  user_id int [not null, ref: > users.user_id]
  shared_at timestamp [default: `CURRENT_TIMESTAMP`]
  share_comment text
  
  Indexes {
    post_id
    user_id
  }
  
  Note: 'Users sharing posts to their network'
}

// ============================================
// RELATIONSHIP NOTES
// ============================================

// One-to-Many Relationships:
// - users -> posts (one user creates many posts)
// - users -> comments (one user writes many comments)
// - posts -> comments (one post has many comments)
// - posts -> likes (one post has many likes)
// - users -> work_experience (one user has many jobs)
// - companies -> work_experience (one company has many employees)
// - users -> education (one user has multiple education records)

// Many-to-Many Relationships:
// - users <-> skills (via user_skills junction table)
// - users <-> users (via connections - self-referencing)
// - users <-> groups (via group_members junction table)

// Self-Referencing Relationships:
// - connections (users connect with users)
// - messages (users message users)
// - recommendations (users recommend users)
